# roboptim-capsule

./: .travis.yml  AUTHORS  CMakeLists.txt  NEWS  README  README.md
doc/: Doxyfile.extra.in  Makefile.am  footer.html  header.html  main.hh.in  package.dox.in
doxygen/HEAD/: a00002.html  a00003.html  a00003.js  a00004.html  a00004.js  a00005.html  a00005.js  a00006.html  a00006.js  a00007.html  a00007.js  a00008.html  a00008.js  a00009.html  a00010.html  a00011.html  a00011.js  a00012.html  a00012.js  a00013.html  a00014.html  a00015.html  a00015.js  a00016.html  a00016.js  a00017.html  a00017.js  a00018.html  a00018.js  a00019.html  a00020.html  a00020.js  a00021.html  a00021.js  a00023.map  a00023.md5  a00024.map  a00024.md5  a00025.map  a00025.md5  (+92 more)
doxygen/HEAD/search/: all_1.js  all_2.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  namespaces_0.js  pages_0.js  search.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  (+3 more)
include/roboptim/capsule/: distance-capsule-point.hh  distance-capsule-polyhedron.hh  distance-segment-polyhedron.hh  fitter.hh  fwd.hh  qhull.hh  types.hh  util.hh  volume.hh
src/: CMakeLists.txt  capsule-generator.cc  distance-capsule-point.cc  distance-capsule-polyhedron.cc  distance-segment-polyhedron.cc  doc.hh  fitter.cc  util.cc  volume.cc
tests/: CMakeLists.txt  capsule-volume.cc  distance-capsule-point.cc  distance-capsule-polyhedron.cc  distance-segment-polyhedron.cc  fitter.cc  util.cc
