SET(LIBRARY_NAME ${PROJECT_NAME})

ADD_LIBRARY(${LIBRARY_NAME}
  SHARED
  volume.cc
  distance-capsule-polyhedron.cc
  )

SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES SOVERSION ${PROJECT_VERSION})

PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} kcd-capsule)
PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} roboptim-core)

INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION lib)
