SET(LIBRARY_NAME ${PROJECT_NAME})

ADD_LIBRARY(${LIBRARY_NAME}
  SHARED
  distance-capsule-point.cc
  fitter.cc
  util.cc
  volume.cc
  )

SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES SOVERSION ${PROJECT_VERSION})

TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${QHULL_LIBRARIES})
PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} roboptim-core)
PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} roboptim-core-plugin-ipopt)

INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION lib)
