# Library
SET(LIBRARY_NAME ${PROJECT_NAME})

ADD_LIBRARY(${LIBRARY_NAME} SHARED
  ${HEADERS}
  doc.hh
  distance-capsule-point.cc
  fitter.cc
  util.cc
  volume.cc
  )

SET_TARGET_PROPERTIES(${LIBRARY_NAME} PROPERTIES SOVERSION ${PROJECT_VERSION})

TARGET_LINK_LIBRARIES(${LIBRARY_NAME} ${QHULL_LIBRARIES} boost_filesystem)
PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} roboptim-core)
PKG_CONFIG_USE_DEPENDENCY(${LIBRARY_NAME} roboptim-core-plugin-ipopt)

INSTALL(TARGETS ${LIBRARY_NAME} DESTINATION ${CMAKE_INSTALL_LIBDIR})

# Executable
SET(EXECUTABLE_NAME capsule-generator)
ADD_EXECUTABLE(${EXECUTABLE_NAME} capsule-generator.cc)
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME}
    ${LIBRARY_NAME}
    boost_program_options)

INSTALL(TARGETS ${EXECUTABLE_NAME} DESTINATION ${CMAKE_INSTALL_BINDIR})
